--- a/packages/lobe-i18n/package.json
+++ b/packages/lobe-i18n/package.json
@@ -66,6 +66,7 @@
     "cosmiconfig": "^9.0.0",
     "dotenv": "^16.4.5",
     "fast-deep-equal": "^3.1.3",
+    "fs-extra": "^11.2.0",
     "glob": "^10.4.5",
     "gpt-tokenizer": "^2.2.1",
     "gray-matter": "^4.0.3",
@@ -88,6 +89,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/json-stable-stringify": "^1.0.36"
   },
   "peerDependencies": {
